--- a/src/node/package.json
+++ b/src/node/package.json
@@ -3,10 +3,12 @@
   "version": "0.2.0",
   "description": "gRPC Library for Node",
   "scripts": {
+    "lint": "jshint src test examples interop index.js",
     "test": "./node_modules/mocha/bin/mocha"
   },
   "dependencies": {
     "bindings": "^1.2.1",
+    "jshint": "^2.5.5",
     "nan": "~1.3.0",
     "protobufjs": "murgatroid99/ProtoBuf.js",
     "underscore": "^1.7.0",
