Running ldconfig shouldn't fail; so we can run fakeroot make install properly.

--- a/templates/Makefile.template
+++ b/templates/Makefile.template
@@ -780,7 +780,7 @@ endif
 % endfor
 ifneq ($(SYSTEM),MINGW32)
 ifneq ($(SYSTEM),Darwin)
-	$(Q) ldconfig
+	$(Q) ldconfig || true
 endif
 endif
 </%def>
@@ -800,7 +800,7 @@ ifneq ($(PROTOBUF_DEP),)
 	$(Q) $(MAKE) -C third_party/protobuf install prefix=$(prefix)
 ifneq ($(SYSTEM),MINGW32)
 ifneq ($(SYSTEM),Darwin)
-	$(Q) ldconfig
+	$(Q) ldconfig || true
 endif
 endif
 endif
