--- a/tools/distpackages/templates/libgrpc-dev/DEBIAN/control
+++ b/tools/distpackages/templates/libgrpc-dev/DEBIAN/control
@@ -2,6 +2,7 @@ Package: libgrpc-dev
 Version: 0.8.0
 Architecture: amd64
 Maintainer: Jan Tattermusch <jtattermusch@google.com>
+Depends: libgrpc, libc6-dev | libc-dev
 Section: libdevel
 Priority: optional
 Homepage: https://github.com/grpc/grpc
