--- a/tools/distpackages/templates/libgrpc/DEBIAN/control
+++ b/tools/distpackages/templates/libgrpc/DEBIAN/control
@@ -2,6 +2,7 @@ Package: libgrpc
 Version: 0.8.0
 Architecture: amd64
 Maintainer: Jan Tattermusch <jtattermusch@google.com>
+Depends: libc6
 Section: libs
 Priority: optional
 Homepage: https://github.com/grpc/grpc
