--- a/src/csharp/Grpc.IntegrationTesting/Grpc.IntegrationTesting.csproj
+++ b/src/csharp/Grpc.IntegrationTesting/Grpc.IntegrationTesting.csproj
@@ -61,5 +61,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="proto\test.proto" />
+    <None Include="proto\empty.proto" />
+    <None Include="proto\messages.proto" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="proto\" />
   </ItemGroup>
 </Project>
