--- a/src/objective-c/examples/Sample/Podfile
+++ b/src/objective-c/examples/Sample/Podfile
@@ -2,7 +2,7 @@ source 'https://github.com/CocoaPods/Specs.git'
 platform :ios, '8.0'
 
 pod 'gRPC', :path => "../../../.."
-pod 'Route_guide', :path => "protos"
+pod 'Route_guide', :path => "RouteGuideClient"
 
 link_with 'Sample', 'SampleTests'
 
