--- a/src/objective-c/examples/Sample/Podfile
+++ b/src/objective-c/examples/Sample/Podfile
@@ -3,6 +3,7 @@ platform :ios, '8.0'
 
 pod 'gRPC', :path => "../../../.."
 pod 'Route_guide', :path => "RouteGuideClient"
+pod 'RemoteTest', :path => "RemoteTestClient"
 
 link_with 'Sample', 'SampleTests'
 
