--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,13 @@ before_install:
   - sudo add-apt-repository ppa:h-rayflood/llvm -y
   - sudo apt-get update -qq
   - sudo apt-get install -qq libgtest-dev libgflags-dev python-virtualenv clang-3.5
-  - sudo pip install cpp-coveralls
+  - sudo pip install cpp-coveralls mako simplejson
 env:
   global:
     - RUBY_VERSION=2.1
     - COVERALLS_PARALLEL=true
   matrix:
+    - CONFIG=opt TEST=sanity
     - CONFIG=dbg TEST=c
     - CONFIG=dbg TEST=c++
     - CONFIG=opt TEST=c
